--- a/src/app/pages/dashboard/certifications/certifications.component.html
+++ b/src/app/pages/dashboard/certifications/certifications.component.html
@@ -51,7 +51,7 @@
             <basic-button
               [label]="t('button.deleteCert')"
               [danger]="true"
-              (buttonClick)="deleteCertification(cert.id)"
+              (buttonClick)="deleteCertification(cert.certCommonId)"
             />
           </div>
         </div>
