--- a/src/app/pages/dashboard/create-experience/create-experience.component.scss
+++ b/src/app/pages/dashboard/create-experience/create-experience.component.scss
@@ -13,3 +13,15 @@
 .create-button-wrapper {
   margin-top: 20px;
 }
+
+.language-selection-buttons {
+  display: flex;
+}
+
+.language-selection-button {
+  width: 100%;
+
+  &.margin {
+    margin: 0 5px
+  }
+}
