--- a/src/app/pages/dashboard/experiences/experiences.component.html
+++ b/src/app/pages/dashboard/experiences/experiences.component.html
@@ -55,7 +55,7 @@
             <basic-button
               [label]="t('button.deleteExp')"
               [danger]="true"
-              (buttonClick)="deleteExperience(exp.id)"
+              (buttonClick)="deleteExperience(exp.experienceCommonId)"
             />
           </div>
         </div>
