test changes revert v2

--- a/src/app/pages/credentials/login/login.component.html
+++ b/src/app/pages/credentials/login/login.component.html
@@ -9,7 +9,7 @@
 >
   <ng-container *transloco="let t">
     <div class="welcome-title" [@fadeInOut]="true">
-      <h1 class="main-title">Bahdashych on Security TEST CHANGES</h1>
+      <h1 class="main-title">Bahdashych on Security</h1>
       <h2 class="second-title flex">
         <span>{{ t('login.welcomeBack') }}&nbsp;</span>
         <basic-emoji emoji="raised-hand.png" [width]="48" [height]="48"/>
