resetup of the auth service

--- a/src/app/layouts/credentials/credentials.layout.html
+++ b/src/app/layouts/credentials/credentials.layout.html
@@ -5,10 +5,10 @@
           <span>Already have an account?&nbsp;</span>
           <a href="/login">Log In</a>
         </div>
-        <div class="login-header-button" *ngIf="headerLink === 'registration'">
-          <span>New to platform?&nbsp;</span>
-          <a href="/registration">Create Account</a>
-        </div>
+<!--        <div class="login-header-button" *ngIf="headerLink === 'registration'">-->
+<!--          <span>New to platform?&nbsp;</span>-->
+<!--          <a href="/registration">Create Account</a>-->
+<!--        </div>-->
       </div>
       <h3 class="login-header-title">
         Personal Blog
@@ -24,10 +24,10 @@
           <span>Already have an account?&nbsp;</span>
           <a href="/login">Log In</a>
         </div>
-        <div class="login-header-button" *ngIf="headerLink === 'registration'">
-          <span>New to platform?&nbsp;</span>
-          <a href="/registration">Create Account</a>
-        </div>
+<!--        <div class="login-header-button" *ngIf="headerLink === 'registration'">-->
+<!--          <span>New to platform?&nbsp;</span>-->
+<!--          <a href="/registration">Create Account</a>-->
+<!--        </div>-->
       </div>
     </div>
 
