--- a/src/app/pages/credentials/login/login.component.html
+++ b/src/app/pages/credentials/login/login.component.html
@@ -16,28 +16,28 @@
 
   <div class="window-container">
     <div class="window-wrapper" [@fadeInOut]="true" *ngIf="step === 2">
-      <h2 class="third-title">{{ t('login.logIn') }}</h2>
+      <h2 class="third-title">Login</h2>
       <basic-input
         type="email"
-        [label]="t('input.email')"
-        [placeholder]="t('input.provideEmail')"
-        [errorMessage]="t('input.wrongEmailFormat')"
+        [label]="'Email'"
+        [placeholder]="'Provide email'"
+        [errorMessage]="'Wrong email format'"
         [value]="email"
         (valueChange)="email = $event"
         (incorrectInput)="incorrectEmail = $event"
       />
       <basic-input
         type="password"
-        [label]="t('input.providePass')"
-        [placeholder]="t('input.pass')"
-        [errorMessage]="t('input.wrongPassFormat')"
+        [label]="'Provide password'"
+        [placeholder]="'Password'"
+        [errorMessage]="'Wrong password format'"
         [value]="password"
         (valueChange)="password = $event"
         (incorrectInput)="incorrectPassword = $event"
       />
       <div class="last-button">
         <basic-button
-          [label]="t('button.logIn')"
+          [label]="'Log in'"
           [disabled]="incorrectCredentials()"
           (buttonClick)="handleLogIn()"
         />
@@ -45,16 +45,16 @@
     </div>
 
     <div class="window-wrapper" [@fadeInOut]="true" *ngIf="step === 3">
-      <h2 class="third-title">{{ t('login.addVerification') }}</h2>
+      <h2 class="third-title">Add verification</h2>
 
       <div *ngIf="isMfaRequired">
-        <p class="paragraph mfa-title-wrapper">{{ t('login.mobileCode') }}</p>
+        <p class="paragraph mfa-title-wrapper">Mobile code</p>
         <basic-input-mfa (mfaCode)="mfaCode = $event" />
       </div>
 
       <div class="last-button">
         <basic-button
-          [label]="t('button.logIn')"
+          [label]="'Log in'"
           [fillButton]="true"
           [disabled]="loginMfaButtonDisabled()"
           (buttonClick)="handleLogIn()"
